<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindows">

    <com.study.commonlib.ui.view.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/manager_account_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:background="@drawable/shape_white_bg">

        <!-- 姓名 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_userName"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 昵称 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_nickName"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 账户类型 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_accountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_accountType"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 账号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_account"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 密码 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_password"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 身份证号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_identity"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 手机号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_mobile"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 邮箱 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_email"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 网址 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_url"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="false"/>

    </LinearLayout>

</LinearLayout>
