<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindows">

    <com.study.commonlib.ui.view.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/manager_card_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:background="@drawable/shape_white_bg">

        <!-- 姓名 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_userName"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 证件类型 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_certificateType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_certificateType"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 证件号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_certificateNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_certificateNumber"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 电脑号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_computerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_computerNumber"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 卡号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_cardNumber"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 银行 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_bankName"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 银行卡号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_bank_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_bankNumber"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="true"/>

        <!-- 手机号 -->
        <com.study.commonlib.ui.view.EditItem
            android:id="@+id/edit_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:et_titleText="@string/manager_mobile"
            app:et_contentEditable="false"
            app:et_arrowIconVisible="false"
            app:et_bottomDividerVisible="false"/>

    </LinearLayout>


</LinearLayout>
